--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .active{
-    @apply font-medium tracking-wide text-blue-700 transition-colors duration-200 hover:text-blue-400
+    @apply font-medium tracking-wide text-black transition-colors duration-200
   }
   
   .default{
