--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .active{
-    @apply font-medium tracking-wide text-black transition-colors duration-200
+    @apply font-medium tracking-wide text-orange-500 transition-colors duration-200
   }
   
   .default{
